# oneiromancer

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: cli.rs  lib.rs  main.rs  ollama.rs  oneiromancer.rs
tests/: integration.rs
tests/data/: hello.c
