[package]
name = "oneiromancer"
version = "0.7.0-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Reverse engineering assistant that uses a locally running LLM to aid with pseudocode analysis."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/oneiromancer"
license = "MIT"
keywords = ["reverse-engineering", "pseudocode", "vuln-dev", "ollama", "aidapal"]
categories = ["security", "command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
ureq = { version = "3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1"
textwrap = { version = "0.16", features = ["smawk"] }
regex = "1.11"

[dev-dependencies]
tempfile = "3.19"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# enable some restrictions
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
missing_docs_in_private_items = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes_without_reason = "warn"
# allow some lints
doc_markdown = "allow"
multiple_crate_versions = "allow"

[lints.rust]
missing_docs = { level = "warn" }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false
