[package]
name = "oneiromancer"
version = "0.7.5-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Reverse engineering assistant that uses a locally running LLM to aid with pseudocode analysis."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/oneiromancer"
license = "MIT"
keywords = ["reverse-engineering", "pseudocode", "vuln-dev", "ollama", "aidapal"]
categories = ["security", "artificial-intelligence", "command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", ".gitignore", ".taplo.toml", "tests/*"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
ureq = { version = "3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1"
textwrap = { version = "0.16", features = ["smawk"] }
regex = "1.11"

[dev-dependencies]
tempfile = "3.19"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# allow some lints
blanket_clippy_restriction_lints = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
question_mark_used = "allow"
print_stdout = "allow"
print_stderr = "allow"
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
impl_trait_in_params = "allow"
missing_inline_in_public_items = "allow"
single_call_fn = "allow"
use_debug = "allow"
doc_markdown = "allow"
multiple_crate_versions = "allow"
